--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,600;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     background-color: #F7C7B9;
-    
+    font-family: 'Poppins', sans-serif;
 }
 
 .header{
     margin-bottom: 10%;
 }
 .header h1{
-    margin-top: -3.5%;
+    margin-top: -3.7%;
     margin-left: 12%;
     
     
@@ -30,7 +32,7 @@
 .header li{
     position: relative;
     left: 60%;
-    margin-top: -22px;
+    top: -35px;
     font-size: 20px;
     padding-left: 40px;
     
@@ -38,14 +40,43 @@
 
 .first_section h1{
    display: flex;
-   
    margin-bottom: 10%;
-   margin-left: 8%;
-   margin-top: -18%;
-   font-size: 48px
-   
+   margin-left: 122px;
+   margin-top: -25%;
+   width: 400px;
+   height: 104px;
+   font-size: 48px;
+   line-height: 52px;
 }
-.first_section img{
-    margin-left: 50%;
+.first_section h3{
+    display: flex;
+    padding-left: 120px;
+    margin-top: -106px;
+    width: 444px;
+    height: 48px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
 
+.first_section img{
+    margin-left: 40%;
+    width: 50%;
+    margin-top: -80px;
+}
+
+.first_button_doacao{
+    background-color: #DA2535;
+    width: 240px;
+    height: 48px;
+    margin-top: 50px;
+    margin-left: 115px;
+    border-radius: 8px;
+    border: #DA2535;
+    padding: 12px, 32px, 12px, 32px;
+    gap: 10px;
+    cursor: pointer;
+    color: #F9F9F9;
+    font-weight: 500;
+    font-size: 14px;
 }
