--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
     padding-left: 40px;
     
 }
+.header li:hover{
+    cursor: pointer;
+    color: #DA2535;
+}
 
 .first_section h1{
    display: flex;
@@ -80,7 +84,13 @@
     font-weight: 500;
     font-size: 14px;
     margin-bottom: 17%;
+    transition: transform 0.3s ease-in-out;
 }
+.first_button_doacao:hover{
+    transform: scale(1.2);
+}
+
+/* secund_section */
 
 .secund_section{
     background-color:#F9F9F9 ;
@@ -104,7 +114,7 @@
     height: 48px;
     margin-left: 481px;
     font-weight: 400;
-    size: 16pz;
+    font-size: 16px;
     line-height: 24px;
     display: flex;
     justify-content: center;
@@ -182,3 +192,53 @@
     width: 198px;
     height: 72px;
 }
+
+/* three_section */
+
+.three_section img{
+    margin-top: -100px;
+}
+
+.three_section h1{
+    width: 488px;
+    height: 104px;
+    position: relative;
+    top: -330px;
+    margin-left: 706px;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 52px;
+}
+
+.three_section h3{
+    width: 457px;
+    height: 72px;
+    margin-top: -290px;
+    margin-left: 706px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.second_button_doacao{
+    background-color: #DA2535;
+    width: 240px;
+    height: 48px;
+    margin-top: 30px;
+    margin-left: 705px;
+    border-radius: 8px;
+    border: #DA2535;
+    padding: 12px, 32px, 12px, 32px;
+    gap: 10px;
+    cursor: pointer;
+    color: #F9F9F9;
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 17%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.second_button_doacao:hover{
+    transform: scale(1.2);
+}
+
