--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,600;1,900&display=swap');
 
 *{
+    
     margin: 0;
     padding: 0;
     background-color: #F7C7B9;
@@ -17,15 +18,23 @@
 .header h1{
     margin-top: -3.7%;
     margin-left: 12%;
-    
+    color: #082E23;
     
 }
-.header img{
+.imagem_papai_noel img{
     width: 4%;
     margin-left: 8%;
     margin-top: 1%;
    
 }
+/* .ramo{
+    
+    top: -500px;
+    width: 50%;
+    margin-top: -80px;
+    position: relative;
+    z-index: -1px;
+} */
 .header ul li{
     display: block;
     text-align: center;
@@ -39,6 +48,7 @@
     top: -35px;
     font-size: 20px;
     padding-left: 40px;
+    color: #082E23;
     
 }
 .header li:hover{
@@ -56,6 +66,7 @@
    height: 104px;
    font-size: 48px;
    line-height: 52px;
+   color: #082E23;
 }
 .first_section h3{
     position: relative;
@@ -67,6 +78,8 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+    color: #082E23;
+    
 }
 
 .first_section img{
@@ -74,6 +87,7 @@
     margin-left: 40%;
     width: 58%;
     margin-top: -80px;
+    
 }
 
 .first_button_doacao{
@@ -102,23 +116,25 @@
 
 .secund_section{
     position: relative;
-    background-color:#F9F9F9 ;
+    background-color: #082E23;
     padding: 20px;
     height: 700px;
     margin-top: -40px;
+    color: #F9F9F9;
 }
 
 .secund_section h1{
-    background-color:#F9F9F9 ;
+    background-color:#082E23 ;
     width: 266px;
     height: 72px;
     margin-left: 637px;
     font-weight: 600;
     size: 58px;
     line-height: 72px;
+    color: #F9F9F9;
 }
 .secund_section h3{
-    background-color: #F9F9F9;
+    background-color: #082E23;
     width: 520px;
     height: 48px;
     margin-left: 481px;
@@ -128,6 +144,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    
 }
 
 .images{
@@ -138,14 +155,14 @@
     position: relative;
     margin-left: 129px;
     top: -510px;
-    background-color: #F9F9F9;
+    background-color:#082E23;
     width: 200px;
     height: 200px;
     
 }
 
 .description p{
-    background-color: #F9F9F9;
+    background-color:#082E23;
     float:left;
     position: relative;
     top: -470px;
@@ -154,6 +171,7 @@
     line-height: 30px;
     font-weight: 500;
     font-size: 20px;
+    color: #F9F9F9;
     
 }
 .description .figuras{
@@ -165,9 +183,10 @@
     top: -200px;
     right: 1190px;
     text-align: center;
-    background-color: #F9F9F9;
+    background-color:#082E23;
     font-size: 16px;
     font-weight: 400;
+    color: #F9F9F9;
 }
 
 .enfeites{
@@ -177,7 +196,8 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    background-color: #F9F9F9;
+    background-color: #082E23;
+    color: #F9F9F9;
 }
 .doces{
     position: absolute;
@@ -186,9 +206,10 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    background-color: #F9F9F9;
+    background-color: #082E23;
     width: 198px;
     height: 48px;
+    color: #F9F9F9;
 }
 .muito_amor{
     position: absolute;
@@ -197,9 +218,10 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    background-color: #F9F9F9;
+    background-color: #082E23;
     width: 198px;
     height: 72px;
+    color: #F9F9F9;
 }
 
 /* three_section */
@@ -281,4 +303,55 @@
     100% {
       transform: translateY(100vh) rotate(360deg);
     }
+  }
+
+  /* footer */
+
+  footer{
+    position: relative;
+    background-color: #082E23;
+    height: 100px;
+  }
+
+  footer h3{
+    position: relative;
+    top: -50px;
+    left: 200px;
+    background-color: #082E23;
+    width: 123px;
+    height: 36px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    color: #F9F9F9;
+
+  }
+
+  .papei_noel_pequeno{
+    position: relative;
+    background-color: #082E23;
+    width: 4%;
+    margin-left: 112px;
+    margin-top: 20px;
+  }
+
+  .circle{
+    position: relative;
+    top: -50px;
+    background-color: #082E23;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+
+  }
+  .circle span{
+    position: relative;
+    top: -35px;
+    left: 480px;
+    display: block;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    background-color: #F9F9F9;
+    /* background-color: #da25344d; */
   }
