--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,600;1,900&display=swap');
 
 *{
-    
     margin: 0;
     padding: 0;
     background-color: #F7C7B9;
@@ -19,13 +18,17 @@
     margin-top: -3.7%;
     margin-left: 12%;
     color: #082E23;
-    
 }
+
 .imagem_papai_noel{
     width: 4%;
     margin-left: 8%;
     margin-top: 1%;
    
+}
+.menu{
+    visibility: hidden;
+    
 }
 .header ul li{
     display: block;
@@ -390,4 +393,99 @@
 .facebook{
     position: relative;
     left: 2px;
+}
+
+/* Responsividade */
+
+@media screen and (max-width: 400px) { 
+    .imagem_papai_noel{
+        position: relative;
+        top: 35px;
+        width: 10%;
+        margin-top: -2%;
+       
+    }
+    .header h1{
+        margin-left: 19%;
+    }
+    .header ul li{
+        visibility: hidden;
+    }
+    .first_section img{
+        visibility: hidden;
+    }
+    .menu{
+        position: relative;
+        top: -35px;
+        background-color: #F7C7B9;
+        visibility: visible;
+        font-size: 30px;
+        margin-left: -20px;
+        
+    }
+    .first_section h1{
+        position: relative;
+        top: 30px;
+        right: 75px;
+        width: 251px;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-weight: 600px;
+        font-size: 32px;
+        line-height: 40px;
+    }
+    .first_section h3{
+        right: 100px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-top: 2px;
+        width: 313px;
+        height: 63px;
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    .first_button_doacao{
+        margin-left: 80px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-bottom: 28%;
+    }
+
+    .secund_section{
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        
+    }
+
+    .secund_section h1{
+        position: relative;
+        left: 188px;
+        margin-right: 30px;
+        width: 400px;
+        height: 83px;
+    }
+
+    .secund_section h3{
+        position: relative;
+        right: 450px;
+        font-size: 16px;
+        font-weight: 400px;
+        /* margin-left: 80px; */
+        margin-top: 100px;
+        width: 400px;
+        height: 300px;
+        margin-right: 300px;
+        padding-right: 80px;
+        
+    }
+    .accessories img{
+        width: 90px;
+        height: 90px;
+        top: 20px;
+    }
 }
