--- a/style.css
+++ b/style.css
@@ -400,13 +400,15 @@
 @media screen and (max-width: 400px) { 
     .imagem_papai_noel{
         position: relative;
+        right: 10px;
         top: 35px;
         width: 10%;
         margin-top: -2%;
        
     }
     .header h1{
-        margin-left: 19%;
+        margin-left: 15%;
+
     }
     .header ul li{
         visibility: hidden;
@@ -426,7 +428,7 @@
     .first_section h1{
         position: relative;
         top: 30px;
-        right: 75px;
+        right: 85px;
         width: 251px;
         height: 80px;
         display: flex;
@@ -437,7 +439,7 @@
         line-height: 40px;
     }
     .first_section h3{
-        right: 100px;
+        right: 112px;
         display: flex;
         justify-content: center;
         text-align: center;
@@ -454,38 +456,150 @@
         padding-right: 30px;
         margin-bottom: 28%;
     }
-
     .secund_section{
-        display: flex;
-        text-align: center;
-        justify-content: center;
-        
+        height: 1100px;
     }
 
     .secund_section h1{
         position: relative;
-        left: 188px;
+        right: 552px;
         margin-right: 30px;
-        width: 400px;
-        height: 83px;
     }
 
     .secund_section h3{
         position: relative;
-        right: 450px;
-        font-size: 16px;
-        font-weight: 400px;
-        /* margin-left: 80px; */
-        margin-top: 100px;
-        width: 400px;
-        height: 300px;
-        margin-right: 300px;
-        padding-right: 80px;
+        right: 445px;
+        font-weight: 200px;
+        margin-top: 10px;
+        width: 280px;
+        height: 63px;
+        font-size: 14px;
+        line-height: 21px;
         
     }
     .accessories img{
         width: 90px;
         height: 90px;
-        top: 20px;
+        top: -900px;
+        left: 15px;
+        margin-bottom: 120px;
+    }
+    
+    .description .figuras{ 
+        margin-bottom: 20px;
+        margin-top: -1440px;
+        margin-right: 60px;
+        top: -200px;
+        right: 22px;
+        font-size: 14px;
+    
+    }
+    .presente{
+        position: relative;
+        top: -770px;
+        left: -115px;
+        font-size: 12px;
+    }
+    .description p{
+        top: -1710px;
+        margin-top: 270px;
+        right: 92px;
+        font-size: 14px;
+        
+    }
+    .enfeites{
+        position: relative;
+        top: -610px;
+        left: -115px;
+        font-size: 12px;
+    }
+    #doces{
+        top: -1790px;
+        right: 80px;
+        
+    }
+
+    .doces{
+        position: relative;
+        top: -1780px;
+        left: 125px;
+        font-size: 12px;
+        width: 144px;
+        height: 36px;
+    }
+    #muito_amor{
+        position: relative;
+        top: -1880px;
+        right: 100px;
+    }
+    .muito_amor{
+        position: relative;
+        top: -1870px;
+        left: 125px;
+        font-size: 12px;
+        width: 144px;
+        height: 36px;
+        
+    }
+
+    /* .three_section img{
+        visibility: hidden;
+    } */
+   
+    .three_section{
+        /* position: relative; */
+        margin-left: -670px;
+    }
+    
+    .three_section h1{
+        width: 214px;
+        height: 72px;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 36px;
+        /* position: relative; */
+        top: -1970px;
+        left: 45px;
+        display: flex;
+        text-align: center;
+        
+    }
+
+    .three_section h3{
+        width: 311px;
+        height: 84px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;
+        /* position: relative; */
+        top: -1660px;
+        display: flex;
+        text-align: center;
+    }
+
+    .second_button_doacao{
+        /* position: relative; */
+        top: -1660px;
+        left: 32px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    footer h3{
+        visibility: hidden;
+    }
+
+    .papei_noel_pequeno{
+        visibility: hidden;
+    }
+
+    footer{
+        background-color: #F7C7B9;
+    }
+
+    .circle{
+        
+        left: -500px;
+        background-color: #F7C7B9;
     }
 }
