--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ html{
 
   footer{
     position: relative;
-    margin-top: 390px;
+    margin-top: 430px;
     height: 100px;
     /* top: 320px; */
     background-color: #082E23;
@@ -365,7 +365,7 @@ html{
 
   footer h3{
     position: absolute;
-    margin-top: -60px;
+    margin-top: -50px;
     /* top: 32px; */
     left: 180px;
     /* left: -1100px; */
@@ -376,6 +376,7 @@ html{
     font-size: 24px;
     /* line-height: 36px; */
     color: #F9F9F9;
+  
 
   }
 
@@ -394,13 +395,13 @@ html{
     float:left; 
     justify-content: space-around;
     gap: 61px;
-    
-    /* background-color: #082E23; */
+    background-color: #082E23;
    
   }
+  
   .circle span{
     position: relative;
-    top: 22px;
+    top: 32px;
     left: 950px;
     /* left: 480px; */
     /* margin-left: 20px; */
@@ -410,10 +411,13 @@ html{
     background-color: #F9F9F9;
   }
   
+.icons{
+    background-color: #082E23;
+}
 .icons span{
     position: relative;
     /* top: -52px; */
-    margin-top: -52px;
+    margin-top: -44px;
     right: 82px;
     display: flex;
     text-align: flex-end;
@@ -451,21 +455,19 @@ html{
 
 /* Responsividade */
 
-@media screen and (max-width: 400px) { 
+/* @media (max-width: 400px ) { 
 
-    .three_section{
-        margin: 0;
-        margin: 0px 0px 0px 0px;
-    }
-    body{
-        max-height: 400px;
-        margin: 0px 0px 0px 0px;
-    }
+   
 
+    html{
+        margin: auto;
+        height: 20vh;
+    }
     .imagem_papai_noel{
         position: relative;
         right: 10px;
-        top: 35px;
+       
+        margin-top: 155px;
         width: 10%;
         margin-top: -2%;
        
@@ -482,17 +484,18 @@ html{
     }
     .menu{
         position: relative;
-        top: -35px;
+        top: -68px;
         background-color: #F7C7B9;
         visibility: visible;
         font-size: 30px;
-        margin-left: -20px;
+        margin-left: 150px;
+        
         
     }
     .first_section h1{
         position: relative;
         top: 30px;
-        right: 85px;
+        right: 105px;
         width: 251px;
         height: 80px;
         display: flex;
@@ -503,11 +506,11 @@ html{
         line-height: 40px;
     }
     .first_section h3{
-        right: 112px;
+        right: 135px;
         display: flex;
         justify-content: center;
         text-align: center;
-        margin-top: 2px;
+        margin-top: 55px;
         width: 313px;
         height: 63px;
         font-size: 14px;
@@ -515,7 +518,7 @@ html{
     }
 
     .first_button_doacao{
-        margin-left: 80px;
+        margin-left: 55px;
         padding-left: 30px;
         padding-right: 30px;
         margin-bottom: 28%;
@@ -526,13 +529,13 @@ html{
 
     .secund_section h1{
         position: relative;
-        right: 552px;
+        right: 575px;
         margin-right: 30px;
     }
 
     .secund_section h3{
         position: relative;
-        right: 445px;
+        right: 465px;
         font-weight: 200px;
         margin-top: 10px;
         width: 280px;
@@ -605,25 +608,21 @@ html{
         height: 36px;
         
     }
-    html{
-        height: 40px;
-    }
+    
     #doacao img{
         visibility: hidden;
     }
-     .three_section{
-        margin: auto;
-    }
-    
+   
     .three_section h1{
         width: 214px;
         font-weight: 600;
         font-size: 24px;
         line-height: 36px;
-        top: -1970px;
-        left: -605px;
+        top: -1670px;
+        left: -635px;
         display: flex;
         text-align: center;
+        
         
     }
 
@@ -632,20 +631,25 @@ html{
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
-        left: -655px;
+        left: -690px;
         top: -1660px;
         display: flex;
         text-align: center;
     }
 
     .second_button_doacao{
-        top: -1660px;
-        left: -612px;
+        top: -1600px;
+        left: -650px;
         padding-left: 30px;
         padding-right: 30px;
     }
+
     footer{
-        top: -1700px;
+        
+        position: relative;
+        margin-top: 230px;
+        height: 70px;
+        background-color: #082E23;
     }
     footer h3{
         visibility: hidden;
@@ -660,12 +664,19 @@ html{
     .circle{
         gap: 35px;
         left: -490px;
-        top: -10px;
+        margin-top: -1020px;
+        background-color: #e8f0ee;
+       
+    }
+    .circle span{
+        left: 5px;
+        margin-top: -255px;
     }
     .icons span{
-        left: -1015px;
-        margin-top: 38px;
-    }
+        left: -1022px;
+        margin-top: -18px;
+      
+       }
 
     .youtube{
         right: 29px;
@@ -681,7 +692,7 @@ html{
 
     .facebook{
        left: -102px;
-    }
+    } */
 
    
-}
+/* } */
