--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html{
     scroll-behavior: smooth;
 }
+
 .snow{
     overflow: hidden;
 }
@@ -24,7 +25,7 @@ html{
 }
 
 .imagem_papai_noel{
-    width: 4%;
+    width: 4vw;
     margin-left: 8%;
     margin-top: 1%;
    
@@ -64,8 +65,7 @@ html{
    margin-bottom: 10%;
    margin-left: 152px;
    margin-top: -30%;
-   width: 400px;
-   height: 104px;
+   width: 25vw;
    font-size: 48px;
    line-height: 52px;
    color: #082E23;
@@ -75,8 +75,8 @@ html{
     display: flex;
     padding-left: 152px;
     margin-top: -106px;
-    width: 444px;
-    height: 48px;
+    width: 30vw;
+    height: 8vh;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
@@ -117,22 +117,23 @@ html{
     background-color: #DA2535;
     margin-right: 10px;
 }
+
 /* secund_section */
 
 .secund_section{
     position: relative;
+    top: -100px;
     background-color: #F9F9F9;
     padding: 20px;
-    height: 700px;
-    margin-top: -40px;
+    height: 90vh;
     color: #082E23;
 }
 
 .secund_section h1{
     position: relative;
     background-color: #F9F9F9 ;
-    width: 266px;
-    height: 72px;
+    width: 26vw;
+    height: 12vh;
     margin-left: 637px;
     font-weight: 600;
     size: 58px;
@@ -142,8 +143,8 @@ html{
 .secund_section h3{
     position: relative;
     background-color: #F9F9F9;
-    width: 520px;
-    height: 48px;
+    width: 30vw;
+    height: 20vh;
     margin-left: 481px;
     font-weight: 400;
     font-size: 16px;
@@ -156,84 +157,79 @@ html{
 
 .images{
     position: relative;
-    top: -510px;
+    top: -580px;
     display: flex;
     flex-wrap: wrap;
     float:left; 
     justify-content: space-around;
-    width: 200px;
-    height: 200px;
+    width: 14vw;
+    height: 22vh;
     padding-left: 130px;
-    margin-bottom: 200px;
     background-color:#F9F9F9;
-    /* display: block;
-    text-align: center;
-    justify-content: center;
-    float:left; 
-    position: relative;
-    margin-left: 129px;
-    top: -510px;
-    background-color:#082E23;
-    width: 200px;
-    height: 200px; */
-    
+   
 }
 
 .description p{
     position: relative;
+    padding-left: 120px;
     display: flex;
+    text-align: start;
+    justify-content: start;
     flex-wrap: wrap;
-    float:left; 
-    justify-content: space-around;
+    float: left;
     color: #082E23;
     font-weight: 600;
     font-size: 20px;
-    padding-left: 255px;
-    top: -670px;
+    top: -500px;
     background-color: #F9F9F9;
-    /* background-color:#082E23;
-    float:left;
-    position: relative;
-    top: -470px;
-    padding-left: 255px;
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 500;
-    font-size: 20px;
-    color: #F9F9F9; */
-    
 }
-.description .figuras{
-    margin-left: -80px;
-    
+.figuras{
+    position: relative;
+    left: 70px;
 }
 
-/* .description h3{
+.enfeites{
     position: relative;
-    margin-top: -200px;
+    right: 50px;
+}
+
+#doces{
+    position: relative;
+    left: 130px;
+}
+
+#muito_amor{
+    position: relative;
+    left: 40px;
+}
+
+
+.description h3{
+    position: relative;
+    top: -450px;
     display: flex;
-    
-    padding-left: 15px;
+    padding-left: 10px;
     float:left; 
-   
     font-size: 16px;
     font-weight: 400;
-} */
-.presente {
+}
+
+#presentes{
     position: relative;
-    top: -200px;
-    right: 1190px;
     text-align: center;
+    right: 100px;
+    width: 15vw;
+    padding-left: 10px;
     background-color: #F9F9F9;
     font-size: 16px;
     font-weight: 400;
     color: #082E23;
 }
 
-.enfeites{
+#enfeites{
     position: absolute;
-    top: 1320px;
-    right: 868px;
+    top: 1259px;
+    right: 858px;
     text-align: center;
     font-size: 16px;
     font-weight: 400;
@@ -243,7 +239,7 @@ html{
 .doces{
     position: absolute;
     top: 1320px;
-    right: 520px;
+    right: 10px;
     text-align: center;
     font-size: 16px;
     font-weight: 400;
@@ -255,7 +251,7 @@ html{
 .muito_amor{
     position: absolute;
     top: 1310px;
-    right: 180px;
+    right: 130px;
     text-align: center;
     font-size: 16px;
     font-weight: 400;
@@ -267,18 +263,17 @@ html{
 
 /* three_section */
 .three_section{
-    width: 200px;
-    height: 100px;
+    width: 80vw;
+    height: 80vh;
 }
 
 .three_section img{
     position: relative;
-    margin-top: -380px;
+    margin-top: -200px;
 }
 
 .three_section h1{
-    width: 488px;
-    /* height: 104px; */
+    width: 30vw;
     position: relative;
     top: -330px;
     margin-left: 706px;
@@ -290,9 +285,7 @@ html{
 .three_section h3{
     position: relative;
     width: 457px;
-    /* height: 72px; */
     top: -270px;
-    /* margin-top: -290px; */
     margin-left: 706px;
     font-weight: 500;
     font-size: 16px;
@@ -301,11 +294,10 @@ html{
 
 .second_button_doacao{
     position: relative;
-    top: -200px;
+    top: -210px;
     background-color: #DA2535;
     width: 240px;
     height: 48px;
-    /* margin-top: -80px; */
     margin-left: 705px;
     border-radius: 8px;
     border: #DA2535;
@@ -315,7 +307,6 @@ html{
     color: #F9F9F9;
     font-weight: 500;
     font-size: 14px;
-    /* margin-bottom: 17%; */
     transition: transform 0.3s ease-in-out;
 }
 
@@ -330,7 +321,6 @@ html{
     width: 100%;
     height: 100%;
     pointer-events: none;
-    /* z-index: -1; */
   }
   
   .snowflake {
@@ -356,9 +346,8 @@ html{
 
   footer{
     position: relative;
-    margin-top: 430px;
-    height: 100px;
-    /* top: 320px; */
+    margin-top: 50px;
+    height: 13vh;
     background-color: #082E23;
     
   }
@@ -366,15 +355,10 @@ html{
   footer h3{
     position: absolute;
     margin-top: -50px;
-    /* top: 32px; */
     left: 180px;
-    /* left: -1100px; */
     background-color: #082E23;
-    /* width: 123px; */
-    /* height: 36px; */
     font-weight: 500;
     font-size: 24px;
-    /* line-height: 36px; */
     color: #F9F9F9;
   
 
@@ -383,8 +367,7 @@ html{
   .papei_noel_pequeno{
     position: relative;
     background-color: #082E23;
-    width: 4%;
-    /* margin-left: -1220px; */
+    width: 4vw;
     margin-left: -360px;
     margin-top: 20px;
   }
@@ -403,10 +386,8 @@ html{
     position: relative;
     top: 32px;
     left: 950px;
-    /* left: 480px; */
-    /* margin-left: 20px; */
-    height: 42px;
-    width: 42px;
+    height: 6vh;
+    width: 3vw;
     border-radius: 50%;
     background-color: #F9F9F9;
   }
@@ -416,7 +397,6 @@ html{
 }
 .icons span{
     position: relative;
-    /* top: -52px; */
     margin-top: -44px;
     right: 82px;
     display: flex;
@@ -431,268 +411,218 @@ html{
     color: #DA2535;
     background-color: #F9F9F9;
     margin-right: 44px;
-    margin-left: 40px;
+    margin-left: 39.5px;
 
 }
 .youtube{
    position: relative;
-   right: 2px;
+   left: 2px;
 }
 
 .linkedin{
     position: relative;
-    right: 3px;
+    left: 5px;
 }
 .instagram{
     position: relative;
-    right: 2px;
+    left: 10px;
 }
 
 .facebook{
     position: relative;
-    left: 2px;
+    left: 18px;
 }  
 
 /* Responsividade */
+@media screen and (max-width: 400px ) {
 
-/* @media (max-width: 400px ) { 
-
-   
-
-    html{
-        margin: auto;
+    header{
         height: 20vh;
     }
     .imagem_papai_noel{
         position: relative;
-        right: 10px;
-       
-        margin-top: 155px;
-        width: 10%;
-        margin-top: -2%;
-       
+        right: 22px;
+        width: 10vw;
+        margin-top: 4%;
     }
-    .header h1{
-        margin-left: 15%;
 
+    .header h1{
+        margin-left: 12%;
+        margin-top: -9.5%;
+        font-size: 16px;
     }
+
     .header ul li{
         visibility: hidden;
     }
+
     .first_section img{
         visibility: hidden;
     }
+
     .menu{
         position: relative;
-        top: -68px;
+        top: -55px;
         background-color: #F7C7B9;
         visibility: visible;
         font-size: 30px;
-        margin-left: 150px;
-        
-        
+        margin-left: 165px;
     }
     .first_section h1{
-        position: relative;
-        top: 30px;
-        right: 105px;
-        width: 251px;
-        height: 80px;
+        width: 65vw;
+        height: 20vh;
+        right: 96px;
         display: flex;
         justify-content: center;
         text-align: center;
         font-weight: 600px;
         font-size: 32px;
-        line-height: 40px;
-    }
-    .first_section h3{
-        right: 135px;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        margin-top: 55px;
-        width: 313px;
-        height: 63px;
-        font-size: 14px;
-        line-height: 21px;
+        
     }
 
+    .first_section h3{
+        top: 40px;
+        right: 125px;
+        width: 82vw;
+        height: 18vh;
+        text-align: center;
+        font-size: 14px;
+        
+    }
     .first_button_doacao{
         margin-left: 55px;
         padding-left: 30px;
         padding-right: 30px;
-        margin-bottom: 28%;
+        top: -45px;
     }
     .secund_section{
-        height: 1100px;
+        height: 200vh;
     }
-
+    
     .secund_section h1{
-        position: relative;
-        right: 575px;
-        margin-right: 30px;
-    }
-
-    .secund_section h3{
-        position: relative;
-        right: 465px;
-        font-weight: 200px;
         margin-top: 10px;
-        width: 280px;
-        height: 63px;
+        right: 565px;
+    }
+    .secund_section h3{
+        width: 80vw;
         font-size: 14px;
-        line-height: 21px;
-        
+        right: 458px;
     }
     .accessories img{
-        width: 90px;
-        height: 90px;
-        top: -900px;
-        left: 15px;
-        margin-bottom: 120px;
+        width: 25vw;
+        height: 22vh;
+        top: -1180px;
+        margin-bottom: 130px;
     }
-    
-    .description .figuras{ 
-        margin-bottom: 20px;
-        margin-top: -1440px;
-        margin-right: 60px;
-        top: -200px;
-        right: 22px;
-        font-size: 14px;
-    
+    .figuras{
+        margin-top: -1600px;
+        left: 10px;
     }
-    .presente{
-        position: relative;
-        top: -770px;
-        left: -115px;
-        font-size: 12px;
+
+    #presentes{
+        margin-top: 580px;
     }
-    .description p{
-        top: -1710px;
-        margin-top: 270px;
-        right: 92px;
-        font-size: 14px;
-        
-    }
+
     .enfeites{
-        position: relative;
-        top: -610px;
-        left: -115px;
-        font-size: 12px;
+        margin-top: -1340px;
     }
-    #doces{
-        top: -1790px;
-        right: 80px;
-        
+
+    #enfeites{
+        margin-top: 580px;
+        color: #DA2535;
     }
 
     .doces{
         position: relative;
-        top: -1780px;
-        left: 125px;
-        font-size: 12px;
-        width: 144px;
-        height: 36px;
-    }
-    #muito_amor{
-        position: relative;
-        top: -1880px;
-        right: 100px;
-    }
-    .muito_amor{
-        position: relative;
-        top: -1870px;
-        left: 125px;
-        font-size: 12px;
-        width: 144px;
-        height: 36px;
+        margin-top: -1080px;
         
+        color: #DA2535;
     }
-    
-    #doacao img{
-        visibility: hidden;
-    }
-   
-    .three_section h1{
-        width: 214px;
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 36px;
-        top: -1670px;
-        left: -635px;
-        display: flex;
-        text-align: center;
-        
-        
+    #doces{
+        margin-top: -1070px;
+        left: -30px;
     }
 
+    #muito_amor{
+        margin-top: -810px;
+        left: -50px;
+    }
+
+    .muito_amor{
+        margin-top: -800px;
+        left: 20px;
+    }
+
+    #doacao img{
+      visibility: hidden;
+    }
+    .three_section h1{
+        text-align: center;
+        width: 70vw;
+        margin-top: -1700px;
+        left: -630px;
+        font-size: 24px;
+       
+    }
     .three_section h3{
-        width: 311px;
+        margin-top: 100px;
+        left: -675px;
+        text-align: center;
         font-weight: 400;
         font-size: 14px;
-        line-height: 21px;
-        left: -690px;
-        top: -1660px;
-        display: flex;
-        text-align: center;
+        
+        width: 311px;
     }
-
     .second_button_doacao{
-        top: -1600px;
-        left: -650px;
+        top: -500px;
+       
+        left: -638px;
         padding-left: 30px;
         padding-right: 30px;
     }
 
     footer{
-        
-        position: relative;
-        margin-top: 230px;
-        height: 70px;
-        background-color: #082E23;
+        top: -150px;
     }
+
     footer h3{
         visibility: hidden;
     }
-
     .papei_noel_pequeno{
         visibility: hidden;
     }
-    .icons{
-        background-color: #082E23;
-    }
     .circle{
         gap: 35px;
-        left: -490px;
-        margin-top: -1020px;
-        background-color: #e8f0ee;
+        left: -40px;
+        margin-top: -915px;
        
     }
     .circle span{
-        left: 5px;
-        margin-top: -255px;
+        width: 10vw;
+        height: 5vh;
+        left: 7px;
+        top: -30px;
     }
     .icons span{
         left: -1022px;
-        margin-top: -18px;
-      
-       }
-
+        margin-top: -8px;
+    }
+    
     .youtube{
         right: 29px;
     }
 
     .linkedin{
-        right: 55px;
+        right: 60px;
     }
 
     .instagram{
-        right: 80px;
+        right: 85px;
     }
 
     .facebook{
-       left: -102px;
-    } */
+       left: -110px;
+       
+    } 
 
-   
-/* } */
+}
